rust/transpiler/tests/errors/unclosed_slot.hyper
<div class="card">
    <{...header}>
        <h1>Title</h1>
</div>
