rust/transpiler/tests/errors/unclosed_slot.expected.err

 file: unclosed_slot.hyper:2:5
error: <{...header}> is never closed.
 2 |     <{...header}>
   |     ^^^^^^^^^^^^^ opened here

 help: Close with </{...header}>

